// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#attributeTypes 1`] = `
Object {
  "created_at": DateTime {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "email": String {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "id": Integer {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "name": String {
    "limit": null,
    "precision": null,
    "scale": null,
  },
  "updated_at": DateTime {
    "limit": null,
    "precision": null,
    "scale": null,
  },
}
`;

exports[`#columns 1`] = `
Array [
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "id",
    "nil": false,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "INTEGER",
      "type": "integer",
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "name",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "varchar",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "email",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "varchar",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "created_at",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": null,
    },
    "tableName": "users",
  },
  Column {
    "collation": null,
    "comment": null,
    "default": null,
    "defaultFunction": null,
    "name": "updated_at",
    "nil": true,
    "sqlTypeMetaData": SqlTypeMetadata {
      "limit": null,
      "precision": null,
      "scale": null,
      "sqlType": "datetime",
      "type": null,
    },
    "tableName": "users",
  },
]
`;

exports[`#lookupCastType 1`] = `
Integer {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`#new 1`] = `
Object {
  "created_at": FromDatabase {
    "name": "created_at",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "email": FromDatabase {
    "name": "email",
    "originalAttribute": Object {},
    "type": String {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "id": FromDatabase {
    "name": "id",
    "originalAttribute": Object {},
    "type": Integer {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "name": FromDatabase {
    "name": "name",
    "originalAttribute": Object {},
    "type": String {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
  "updated_at": FromDatabase {
    "name": "updated_at",
    "originalAttribute": Object {},
    "type": DateTime {
      "limit": null,
      "precision": null,
      "scale": null,
    },
    "valueBeforeTypeCast": null,
  },
}
`;

exports[`#new 2`] = `
Object {
  "created_at": undefined,
  "email": undefined,
  "id": undefined,
  "name": undefined,
  "updated_at": undefined,
}
`;

exports[`#records 1`] = `Array []`;

exports[`#records 2`] = `
Array [
  klass {
    "_startTransactionState": Object {},
    "attributes": Object {},
    "destroyed": false,
    "destroyedByAssociation": null,
    "markedForDestruction": false,
    "newRecord": false,
    "readonly": false,
    "transactionState": null,
  },
]
`;

exports[`#tableStructure 1`] = `
Array [
  Object {
    "cid": 0,
    "dflt_value": null,
    "name": "id",
    "notnull": 1,
    "pk": 1,
    "type": "INTEGER",
  },
  Object {
    "cid": 1,
    "dflt_value": null,
    "name": "name",
    "notnull": 0,
    "pk": 0,
    "type": "varchar",
  },
  Object {
    "cid": 2,
    "dflt_value": null,
    "name": "email",
    "notnull": 0,
    "pk": 0,
    "type": "varchar",
  },
  Object {
    "cid": 3,
    "dflt_value": null,
    "name": "created_at",
    "notnull": 0,
    "pk": 0,
    "type": "datetime",
  },
  Object {
    "cid": 4,
    "dflt_value": null,
    "name": "updated_at",
    "notnull": 0,
    "pk": 0,
    "type": "datetime",
  },
]
`;

exports[`tableMetadata 1`] = `
String {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;

exports[`tableMetadata 2`] = `
String {
  "limit": null,
  "precision": null,
  "scale": null,
}
`;
